--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,8 @@
   </head>
   <body>
     <button type="button" data-action="start">Start</button>
-    <button type="button" data-action="stop" disabled>Stop</button>
+    <button type="button" data-action="stop">Stop</button>
+    <button type="button" data-action="reset">Reset</button>
 
     <script src="./index.js"></script>
   </body>
